# cvx-bandits

./: .gitignore  bandit.py  losses.ipynb  main.py  new.ipynb  old.py  pyproject.toml  quadratic.ipynb  runner.py  sampling.py  test.ipynb  utils.py
algorithms/: bisection.py  exp_fast.py  exp_weights.py  learner.py  ons.py  thompson_sampling.py
notebooks/: adversarial.ipynb  convex_regression_metropolis_hastings.ipynb  spline.ipynb  thompson_samplings.ipynb
