[tool.poetry]
package-mode = false
name = "cvx-exp"
version = "0.1.0"
description = ""
authors = ["sarb9 <sarb1376@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.2"
matplotlib = "^3.10.0"
cvxpy = "^1.6.0"
seaborn = "^0.13.2"
scipy = "^1.15.1"
pdbpp = "^0.10.3"
manim = "^0.19.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
